Heading of redo panel is not aligned properly #92313

Closed
opened 2021-10-18 13:46:32 +02:00 by Pratik Borhade · 7 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-17 17:10, hash: 452c78757f
Caused by 93544b641b

Short description of error
Heading of the redo panel is slightly aligned below the centre.

working Broken
image.png image.png

Exact steps for others to reproduce the error

  • Open default blender file
  • Scale the cube with key {key S}
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-17 17:10, hash: `452c78757f` Caused by 93544b641b **Short description of error** Heading of the redo panel is slightly aligned below the centre. | working | Broken | | -- | -- | | ![image.png](https://archive.blender.org/developer/F11245829/image.png) | ![image.png](https://archive.blender.org/developer/F11245797/image.png) | **Exact steps for others to reproduce the error** - Open default blender file - Scale the cube with key {key S}
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Author
Member

Caused by 93544b641b

cc @pablovazquez

Caused by 93544b641b cc @pablovazquez
Contributor

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R
Pratik Borhade self-assigned this 2021-10-28 22:05:21 +02:00
Pratik Borhade changed title from Heading of Adjust last operation is not aligned properly to Heading of redo panel is not aligned properly 2021-11-25 13:40:01 +01:00

This issue was referenced by 5514ca58a4

This issue was referenced by 5514ca58a4d4e03d9062bc479488faca7e577677
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92313
No description provided.